--- a/css/style.css
+++ b/css/style.css
@@ -12,9 +12,12 @@
 @import "./home/tecnologia.css";
 @import "./home/parceiros.css";
 @import "./home/depoimento.css";
+@import "./home/footer.css";
+
 
 /*BICICLETAS*/
 @import "./bicicletas/bicicletas-lista.css";
 
-
+/*SEGUROS*/
+@import "./seguros/seguros.css"
 
