--- a/css/home/footer.css
+++ b/css/home/footer.css
@@ -4,13 +4,14 @@
 
 .footer {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 3fr 5fr 4fr;
     padding-top: 60px;
 }
 
-.footer h3 {
-    padding-bottom: 30px;
+.footer h3, .footer-contato ul, .footer li {
+    margin-bottom: 32px;
 }
+
 
 .footer-contato li+li, .footer-informacoes li+li  {
     margin-top: 20px;
@@ -32,9 +33,14 @@
     padding-top: 20px;
 }
 
+.footer a:hover {
+    color: var(--cor-0);
+}
+
 .footer-copy {
     padding: 40px 0px;
     grid-column: 1/-1;
+    
 }
 
 @media screen and (max-width: 800px) {
@@ -45,9 +51,23 @@
 
     }
 
-    .footer img {
+    .footer > img {
         display: none;
     }
 
+
+}
+
+@media screen and (max-width: 600px) {
+    .footer {
+        
+        grid-template-columns: 1fr;
+        gap: 50px;
+    }
+    
+    .footer-copy {
+        padding: 30px 0px;
+        text-align: center;
+    }
 
 }
