--- a/css/style.css
+++ b/css/style.css
@@ -19,5 +19,9 @@
 @import "./bicicletas/bicicletas-lista.css";
 
 /*SEGUROS*/
-@import "./seguros/seguros.css"
+@import "./seguros/seguros.css";
 
+
+/*TERMOS*/
+
+@import "./termos.css"
