--- a/css/bicicletas/bicicletas-lista.css
+++ b/css/bicicletas/bicicletas-lista.css
@@ -17,6 +17,10 @@
     overflow-x: auto ;
 }
 
+#bicicleta .bicicletas-lista ul {
+    padding: 0px 0px 20px 0px;
+}
+
 .bicicletas-lista li {
     min-width: 280px;
 }
@@ -55,7 +59,6 @@
 }
 
 @media screen and (max-with: 800px) {
-    
     .bicicletas-lista {
         padding-bottom: 60px;
     }
