--- a/css/bicicletas/bicicletas.css
+++ b/css/bicicletas/bicicletas.css
@@ -1,3 +1,9 @@
+.header-menu a {
+    display: inline-block;
+    padding: 16px 0;
+    position: relative;
+}
+
 .bicicletas-bg {
     background: linear-gradient(to right, var(--cor-0) 30%, var(--cor-11) 0%);
 }
@@ -26,7 +32,7 @@
     display: inline-block;
     padding: 8px 16px 8px 8px;
     border-radius: 4px 0 0 4px;
-}
+} 
 
 img[src$=".jpg"] {
     border-radius: 4px;
