--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
 
 /*UTILIDADES*/
 @import "./utilidades/componentes.css";
+@import "./utilidades/formulario.css";
 
 /*HOME*/
 @import "./home/introducao.css";
@@ -18,14 +19,23 @@
 /*BICICLETAS*/
 @import "./bicicletas/bicicletas-lista.css";
 @import "./bicicletas/bicicletas.css";
+@import "./bicicletas/nimbus.css";
+@import "../bicicletas/seguro.css";
 
 /*SEGUROS*/
 @import "./seguros/seguros.css";
+@import "./seguros/vantagens.css";
+@import "./seguros/perguntas.css";
+
+
+
+/*CONTATO*/
+
+@import "./contato/contato.css";
+@import "./contato/lojas.css";
 
 
 /*TERMOS*/
 
 @import "./termos.css";
-
-/*BICICLETAS*/
 
