--- a/css/bicicletas/bicicletas.css
+++ b/css/bicicletas/bicicletas.css
@@ -1,143 +1,104 @@
-.header-menu a {
-    display: inline-block;
-    padding: 16px 0;
-    position: relative;
-}
-
 .bicicletas-bg {
-    background: linear-gradient(to right, var(--cor-0) 30%, var(--cor-11) 0%);
+  background: linear-gradient(to right, var(--cor-0) 30%, var(--cor-11) 0%);
 }
 
 .bicicletas {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding-bottom: 60px;
-    padding-top: 60px;
-    gap: 40px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 40px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background: url("../../img/dec/top-right.svg") no-repeat top 40px right 20px;
 }
 
 .bicicletas-imagem {
-    display: grid;
+  display: grid;
 }
 
 .bicicletas-imagem img {
-    grid-area: 1/1;
+  grid-area: 1/1;
 }
 
 .bicicletas-imagem span {
-    grid-area: 1/1;
-    place-self: start end;
-    margin-top: 20px;
-    background: var(--cor-12);
-    display: inline-block;
-    padding: 8px 16px 8px 8px;
-    border-radius: 4px 0 0 4px;
-} 
-
-img[src$=".jpg"] {
-    border-radius: 4px;
-}
-
-img {
-    max-width: 100%;
-    display: block;
+  grid-area: 1/1;
+  place-self: start end;
+  margin-top: 20px;
+  background: var(--cor-12);
+  display: inline-block;
+  padding: 8px 16px 8px 8px;
+  border-radius: 4px 0 0 4px;
 }
 
 .bicicletas-conteudo {
-    display: grid;
-    grid-template-columns: 1fr auto;
-    align-content: start;
+  display: grid;
+  grid-template-columns: 1fr auto;
+  align-content: start;
 }
 
-.bicicletas h2, 
-.bicicletas p {
-    grid-column: 1/-1;
+.bicicletas-conteudo h2,
+.bicicletas-conteudo p {
+  grid-column: 1/-1;
 }
 
 .bicicletas-conteudo h2 {
-    margin-bottom: 20px;
+  margin-bottom: 20px;
 }
 
-.bicicletas h2::before {
-    content: "";
-    display: block;
-    width: 12px;
-    height: 8px;
-    background-color: var(--cor-p1);
-    margin-bottom: 8px;
+.bicicletas-conteudo h2::before {
+  content: "";
+  display: block;
+  width: 12px;
+  height: 8px;
+  background-color: var(--cor-p1);
+  margin-bottom: 8px;
 }
 
 .bicicletas-conteudo p {
-    margin-bottom: 32px;
+  margin-bottom: 32px;
 }
 
 .bicicletas-conteudo a {
-    place-self: end;
+  place-self: end;
 }
 
-.bicicletas li {
-    display: flex;
-    align-items: center;
-}
-
-
-.bicicletas-conteudo ul {
-    display: grid;
-    gap: 16px;
+.bicicletas-conteudo li {
+  display: flex;
+  align-items: center;
+  /* gap: 8px; */
 }
 
 .bicicletas-conteudo img {
-    width: 24px;
-    margin-right: 8px;
-} 
-
-
-.botao.seta {
-    display: flex;
-    align-items: center;
+  width: 24px;
+  margin-right: 8px;
 }
 
-.botao.seta::after {
-    content: "";
-    display: inline-block;
-    width: 18px;
-    height: 10px;
-    margin-left: 12px;
-    background: url(../../img/icones/seta.svg);
-    transition: transform .2s;
+.bicicletas-conteudo ul {
+  display: grid;
+  gap: 16px;
 }
 
-.botao.seta:hover::after {
-    transform: translateX(4px);
-}
-
-
-@media screen and (max-width: 800px) {
-    .bicicletas-bg {
-        background: var(--cor-11);
-    }
-    
-    .bicicletas {
-        grid-template-columns: 1fr;
-        gap: 20px;
-        padding-top: 40px;
-        padding-bottom: 40px;
-    }
-
-    
-}
-
-
-@media screen and (max-width: 600px) {
-.bicicletas-conteudo {
+@media (max-width: 800px) {
+  .bicicletas-bg {
+    background: var(--cor-11);
+  }
+  .bicicletas {
     grid-template-columns: 1fr;
+    gap: 20px;
+    padding-top: 40px;
+    padding-bottom: 40px;
+  }
 }
-.bicicletas ul {
+
+@media (max-width: 600px) {
+  .bicicletas-conteudo {
+    grid-template-columns: 1fr;
+  }
+  .bicicletas-conteudo ul {
     font-size: 1rem;
     grid-template-columns: 1fr 1fr;
     margin-bottom: 32px;
-}
-.bicicletas a {
+  }
+  .bicicletas-conteudo a {
     place-self: start;
-}
+  }
 }
